#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pointbook], [1.0], [chipz68q@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
PKG_CHECK_MODULES([PKGGTK], [gtk+-3.0])
PKG_CHECK_MODULES([SQLITE3], [sqlite3])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_DEFINE(DATABASE_NAME, "pointbook.db", [database name])

AC_CONFIG_FILES([Makefile
				data/Makefile
				src/Makefile])
AC_OUTPUT
